# secpipe-cloudops

./: .dockerignore  .gitignore  Dockerfile  README.md  config.yaml.example  pyproject.toml  requirements.txt  triage.py  triage_cloud_findings.py
cloud/: cloud_discovery.json  cloud_findings.json  generate_remediation_tickets.py
docs/: KB_identifying_resource_owners.md  KB_triage_workflow.md  SOP_excessive_iam.md  SOP_public_bucket.md  ticket_template.md
k8s/: configmap.yaml  deployment.yaml  namespace.yaml  service.yaml
secpipe/: __init__.py  cli.py  pipeline.py  schema.py  tickets.py
secpipe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
secpipe/detections/: __init__.py  base.py  brute_force.py  cloud_triage.py  defense_evasion.py  persistence.py  privilege.py
secpipe/outputs/: __init__.py  base.py  jsonl.py  markdown.py  sqlite.py  webhook.py
secpipe/parsers/: __init__.py  auth.py  base.py  cloud_findings.py  json_events.py  nginx.py  syslog.py
tests/: conftest.py  test_pipeline.py  test_tickets.py
tests/detections/: test_detections.py
tests/outputs/: test_outputs.py
tests/parsers/: test_parsers.py
